# mlcoalsim-v2

./: .clang-format  .gitignore  CMakeLists.txt  README  README.md  catalog.md  compile.sh  maskfile.md  run_mlcoalsim.sh  test.sh
_original/: mlcoalsimB  mlcoalsimBmpi  mlcoalsimX  mlcoalsimX_ZnS  mlcoalsimXmpi  mlcoalsimXmpi_ZnS
baselines/case01/: 1locus_1pop_mhit0_n100_S200.txt  1locus_1pop_mhit0_n100_S200A.txt  1locus_1pop_mhit0_n100_S200A_PPercentiles.out  1locus_1pop_mhit0_n100_S200A_linkedlocus_sha256.txt
baselines/case02/: 1locus_1pop_mhit0_rec100_n100_S200.txt  1locus_1pop_mhit0_rec100_n100_S200A.txt  1locus_1pop_mhit0_rec100_n100_S200A_PPercentiles.out  1locus_1pop_mhit0_rec100_n100_S200A_linkedlocus_sha256.txt
baselines/case03/: 1locus_1pop_mhit0_recINF_Lmod.txt  1locus_1pop_mhit0_recINF_LmodA.txt  1locus_1pop_mhit0_recINF_LmodA_PPercentiles.out  1locus_1pop_mhit0_recINF_LmodA_linkedlocus_sha256.txt
baselines/case04/: 1locus_1pop_mhit0_obs.txt  1locus_1pop_mhit0_obsA.txt  1locus_1pop_mhit0_obsA_PPercentiles.out  1locus_1pop_mhit0_obsA_linkedlocus_sha256.txt
baselines/case05/: 10loci_with_priorsA_locus_00000.out  10loci_with_priorsA_locus_00001.out  10loci_with_priorsA_locus_00002.out  10loci_with_priorsA_locus_00003.out  10loci_with_priorsA_locus_00004.out  10loci_with_priorsA_locus_00005.out  10loci_with_priorsA_locus_00006.out  10loci_with_priorsA_locus_00007.out  10loci_with_priorsA_locus_00008.out  10loci_with_priorsA_locus_00009.out  10loci_with_priorsA_prior00003.out  10loci_with_priorsA_prior00006.out  10loci_with_priorsA_prior00008.out  10loci_with_priorsA_prior00011.out  10loci_with_priorsA_prior00013.out  10loci_with_priorsA_prior00014.out  10loci_with_priorsA_summary.out  prior001.txt  prior003.txt  prior014.txt
benchmark/: 1locus_1pop_mhit0_rec100_n100_sites100000.txt  2loci_1pop_mhit0_rec100_n100_sites100000.txt  CMakeLists.txt  benchmark.c  benchmark.h  benchmark_types.h
examples/example00/: Example1locus_1pop_mhit0.txt  Example1locus_1pop_mhit0_S20.txt  Example1locus_1pop_mhit0_S200.txt  Example1locus_1pop_mhit0_S20_n100.txt  Example1locus_1pop_mhit0_bl.txt  Example1locus_1pop_mhit0_n100.txt  Example1locus_1pop_mhit0_n100_S200.txt  Example1locus_1pop_mhit0_obs.txt  Example1locus_1pop_mhit0_rec100.txt  Example1locus_1pop_mhit0_rec100_S20.txt  Example1locus_1pop_mhit0_rec100_S200.txt  Example1locus_1pop_mhit0_rec100_S20_n100.txt  Example1locus_1pop_mhit0_rec100_n100.txt  Example1locus_1pop_mhit0_rec100_n100_S200.txt  Example1locus_1pop_mhit0_rec100_t10.txt  Example1locus_1pop_mhit0_rec100_t10_n100.txt  Example1locus_1pop_mhit0_recINF_Lmod.txt  Example1locus_1pop_mhit0_recINF_S200_Lfix.txt  Example1locus_1pop_mhit0_recINF_S20_Lfix.txt  Example1locus_1pop_mhit0_recINF_S20_n100_Lfix.txt  Example1locus_1pop_mhit0_recINF_n100_Lmod.txt  Example1locus_1pop_mhit0_recINF_n100_s200_Lfix.txt  Example1locus_1pop_mhit0_recINF_t10_Lmod.txt  Example1locus_1pop_mhit0_recINF_t10_n100_Lmod.txt  Example1locus_1pop_mhit0_t10.txt  Example1locus_1pop_mhit0_t10_n100.txt  run_mlcoalsim00.sh
examples/example01/: Example1locus.txt  Example1locus_progress.txt  prior004.txt  prior005.txt  prior006.txt  run_mlcoalsim01.sh
examples/example02/: mlcoal_input1  mlcoal_input2  run_mlcoalsim02.sh
examples/example10/: Example10loci.txt  do_priors.R  prior002.txt  prior016.txt  run_mlcoalsim10.sh
lib/: CMakeLists.txt
source/: benchmark.c  benchmark.h  benchmark_types.h  distrib.c  distrib.h  get_mod_sm.c  input_hh3_sm.c  log.h  main_sm2.c  mlsp_sm.h  ms2_sm.c  ms2_sm.h  ms2_sm_helpers.c  ms2_sm_helpers.h  ms2_sm_zn.c  ms2_sm_zn.h  neut_tests.c  neut_tests.h  neutpar.c  neutpar.h  neutpar_common.c  neutpar_common.h  neutpar_window.c  neutpar_window.h  print_helper.c  print_helper.h  print_helpers.c  print_helpers.h  ran1.c  ran1.h  streec2_sm.c  streec2_sm.h  zf_log.c  zf_log.h
source/libstr/: CMakeLists.txt  str.c  str.h
test/: CMakeLists.txt  main.c  str.c  test.h
validation/: Example1locus_1pop_mhit0A_SHA256SUMS  Example1locus_1pop_mhit0A_rec100_t10_n100_PPercentiles.out  Example1locus_1pop_mhit0A_recINF_Lmod_SHA256SUMS  Example1locus_1pop_mhit0A_recINF_S200_Lfix_PPercentiles.out  Example1locus_1pop_mhit0A_recINF_S200_Lfix_SHA256SUMS  validate.sh
validation/example00/: Example1locus_1pop_mhit0A_PPercentiles.out  Example1locus_1pop_mhit0A_SHA256SUMS  Example1locus_1pop_mhit0A_n100_S200_SHA256SUMS  Example1locus_1pop_mhit0A_rec100_n100_S200_PPercentiles.out  Example1locus_1pop_mhit0A_rec100_n100_S200_SHA256SUMS  Example1locus_1pop_mhit0A_rec100_t10_n100_SHA256SUMS  Example1locus_1pop_mhit0_blA_PPercentiles.out  Example1locus_1pop_mhit0_blA_SHA256SUMS  Example1locus_1pop_mhit0_n100_S200A_PPercentiles.out  Example1locus_1pop_mhit0_n100_S200A_SHA256SUMS  Example1locus_1pop_mhit0_obsB_PPercentiles.out  Example1locus_1pop_mhit0_obsB_SHA256SUMS  Example1locus_1pop_mhit0_rec100_n100_S200A_SHA256SUMS  Example1locus_1pop_mhit0_rec100_t10_n100A_SHA256SUMS  Example1locus_1pop_mhit0_recINF_LmodA_PPercentiles.out  Example1locus_1pop_mhit0_recINF_LmodA_SHA256SUMS  Example1locus_1pop_mhit0_recINF_S200_LfixA_SHA256SUMS
validation/example01/: Example1locus_locus_00000_rank000.out  Example1locus_prior00004.out  Example1locus_prior00005.out  Example1locus_prior00007.out  Example1locus_summary.out
validation/example02/: mlcoal_input1_PPercentiles.out  mlcoal_output1.txt  mlcoal_output2.txt  mlcoal_output2_linkedlocus__rank000.out
validation/example10/: Example10loci_locus_00000.out  Example10loci_locus_00001.out  Example10loci_locus_00002.out  Example10loci_locus_00003.out  Example10loci_locus_00004.out  Example10loci_locus_00005.out  Example10loci_locus_00006.out  Example10loci_locus_00007.out  Example10loci_locus_00008.out  Example10loci_locus_00009.out  Example10loci_prior00001.out  Example10loci_prior00002.out  Example10loci_prior00007.out  Example10loci_prior00009.out  Example10loci_prior00010.out  Example10loci_prior00012.out  Example10loci_prior00015.out  Example10loci_prior00016.out  Example10loci_summary.out
zf_log/: CMakeLists.txt  zf_log.c  zf_log.h
